assert-struct/tests/snapshots/nested__deeply_nested_option_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_option_pattern.rs:39:29
   |
39 |                 debug: Some(true),  // Line 38 - should report this line (Some(false) != Some(true))
   |                             ^^^^ got false
